completedthe map code