@@ -1,8 +1,8 @@
 package com.modernjava._8collections.map;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /**
  * Map with Streams API - Advanced Map operations using Java Streams
@@ -41,28 +41,28 @@ public class MapWithStreams {
 
         // Create a map where key is the fruit and value is its length
         Map<String, Integer> fruitLengths = fruits.stream()
-            .collect(Collectors.toMap(
-                fruit -> fruit,           // key mapper
-                fruit -> fruit.length()   // value mapper
-            ));
+                .collect(Collectors.toMap(
+                        fruit -> fruit,           // key mapper
+                        fruit -> fruit.length()   // value mapper
+                ));
 
         System.out.println("Fruit lengths: " + fruitLengths);
 
         // Create a map where key is the length and value is the fruit
         Map<Integer, String> lengthToFruit = fruits.stream()
-            .collect(Collectors.toMap(
-                String::length,    // key mapper (method reference)
-                Function.identity() // value mapper (the fruit itself)
-            ));
+                .collect(Collectors.toMap(
+                        String::length,    // key mapper (method reference)
+                        Function.identity() // value mapper (the fruit itself)
+                ));
 
         System.out.println("Length to fruit: " + lengthToFruit);
 
         // Create a map with uppercase keys
         Map<String, String> uppercaseFruits = fruits.stream()
-            .collect(Collectors.toMap(
-                String::toUpperCase,
-                Function.identity()
-            ));
+                .collect(Collectors.toMap(
+                        String::toUpperCase,
+                        Function.identity()
+                ));
 
         System.out.println("Uppercase fruits: " + uppercaseFruits);
         System.out.println();
@@ -85,31 +85,33 @@ public class MapWithStreams {
 
         // Filter students with grade >= 90
         Map<String, Integer> highPerformers = studentGrades.entrySet().stream()
-            .filter(entry -> entry.getValue() >= 90)
-            .collect(Collectors.toMap(
-                Map.Entry::getKey,
-                Map.Entry::getValue
-            ));
+                .filter(entry -> entry.getValue() >= 90)
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        Map.Entry::getValue
+                ));
 
         System.out.println("High performers (>= 90): " + highPerformers);
 
         // Filter students whose names start with specific letter
         Map<String, Integer> namesStartingWithA = studentGrades.entrySet().stream()
-            .filter(entry -> entry.getKey().startsWith("A"))
-            .collect(Collectors.toMap(
-                Map.Entry::getKey,
-                Map.Entry::getValue
-            ));
+                .filter(entry -> entry.getKey().startsWith("A"))
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        Map.Entry::getValue
+                ));
 
         System.out.println("Names starting with 'A': " + namesStartingWithA);
 
         // Filter and transform in one operation
+        // Create a map of students with grade >= 85 and categorize them
+        // as "Excellent" (90+) or "Good" (85-89)
         Map<String, String> gradeCategories = studentGrades.entrySet().stream()
-            .filter(entry -> entry.getValue() >= 85)
-            .collect(Collectors.toMap(
-                Map.Entry::getKey,
-                entry -> entry.getValue() >= 90 ? "Excellent" : "Good"
-            ));
+                .filter(entry -> entry.getValue() >= 85)
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> entry.getValue() >= 90 ? "Excellent" : "Good"
+                ));
 
         System.out.println("Grade categories (85+): " + gradeCategories);
         System.out.println();
@@ -131,33 +133,26 @@ public class MapWithStreams {
 
         // Apply 10% discount to all prices
         Map<String, Double> discountedPrices = prices.entrySet().stream()
-            .collect(Collectors.toMap(
-                Map.Entry::getKey,
-                entry -> entry.getValue() * 0.9
-            ));
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> entry.getValue() * 0.9
+                ));
 
         System.out.println("Discounted prices (10% off): " + discountedPrices);
 
-        // Transform keys to uppercase and round prices
-        Map<String, Integer> roundedPrices = prices.entrySet().stream()
-            .collect(Collectors.toMap(
-                entry -> entry.getKey().toUpperCase(),
-                entry -> (int) Math.round(entry.getValue())
-            ));
-
-        System.out.println("Uppercase keys with rounded prices: " + roundedPrices);
 
         // Create a new map with price categories
+        // "Budget" (<300), "Mid-range" (300-700), "Premium" (>700)
         Map<String, String> priceCategories = prices.entrySet().stream()
-            .collect(Collectors.toMap(
-                Map.Entry::getKey,
-                entry -> {
-                    double price = entry.getValue();
-                    if (price < 300) return "Budget";
-                    else if (price < 700) return "Mid-range";
-                    else return "Premium";
-                }
-            ));
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> {
+                            double price = entry.getValue();
+                            if (price < 300) return "Budget";
+                            else if (price < 700) return "Mid-range";
+                            else return "Premium";
+                        }
+                ));
 
         System.out.println("Price categories: " + priceCategories);
         System.out.println();
@@ -170,49 +165,52 @@ public class MapWithStreams {
         System.out.println("4. Grouping into Maps:");
 
         List<Employee> employees = Arrays.asList(
-            new Employee("Alice", "Engineering", 95000),
-            new Employee("Bob", "Marketing", 65000),
-            new Employee("Charlie", "Engineering", 88000),
-            new Employee("David", "Sales", 72000),
-            new Employee("Eve", "Marketing", 58000),
-            new Employee("Frank", "Engineering", 102000)
+                new Employee("Alice", "Engineering", 95000),
+                new Employee("Bob", "Marketing", 65000),
+                new Employee("Charlie", "Engineering", 88000),
+                new Employee("David", "Sales", 72000),
+                new Employee("Eve", "Marketing", 58000),
+                new Employee("Frank", "Engineering", 102000)
         );
 
         // Group employees by department
         Map<String, List<Employee>> employeesByDepartment = employees.stream()
-            .collect(Collectors.groupingBy(Employee::getDepartment));
+                .collect(Collectors.groupingBy(Employee::getDepartment));
 
         System.out.println("Employees by department:");
+
         employeesByDepartment.forEach((dept, empList) -> {
             System.out.println(dept + ": " + empList.stream()
-                .map(Employee::getName)
-                .collect(Collectors.toList()));
+                    .map(Employee::getName)
+                    .toList());
         });
 
         // Group and count employees by department
+        // Count of employees in each department
         Map<String, Long> employeeCountByDepartment = employees.stream()
-            .collect(Collectors.groupingBy(
-                Employee::getDepartment,
-                Collectors.counting()
-            ));
+                .collect(Collectors.groupingBy(
+                        Employee::getDepartment,
+                        Collectors.counting()
+                ));
 
         System.out.println("\nEmployee count by department: " + employeeCountByDepartment);
 
         // Group employees by salary range
+        // "High" (>=80000) and "Standard" (<80000)
         Map<String, List<String>> employeesBySalaryRange = employees.stream()
-            .collect(Collectors.groupingBy(
-                emp -> emp.getSalary() >= 80000 ? "High" : "Standard",
-                Collectors.mapping(Employee::getName, Collectors.toList())
-            ));
+                .collect(Collectors.groupingBy(
+                        emp -> emp.getSalary() >= 80000 ? "High" : "Standard",
+                        Collectors.mapping(Employee::getName, Collectors.toList())
+                ));
 
         System.out.println("Employees by salary range: " + employeesBySalaryRange);
 
-        // Average salary by department
+        // Calculate average salary for each department
         Map<String, Double> avgSalaryByDepartment = employees.stream()
-            .collect(Collectors.groupingBy(
-                Employee::getDepartment,
-                Collectors.averagingDouble(Employee::getSalary)
-            ));
+                .collect(Collectors.groupingBy(
+                        Employee::getDepartment,
+                        Collectors.averagingDouble(Employee::getSalary)
+                ));
 
         System.out.println("Average salary by department: " + avgSalaryByDepartment);
         System.out.println();
@@ -231,40 +229,40 @@ public class MapWithStreams {
 
         // Calculate average score for each subject
         Map<String, Double> averageScores = subjectScores.entrySet().stream()
-            .collect(Collectors.toMap(
-                Map.Entry::getKey,
-                entry -> entry.getValue().stream()
-                    .mapToInt(Integer::intValue)
-                    .average()
-                    .orElse(0.0)
-            ));
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> entry.getValue().stream()
+                                .mapToInt(Integer::intValue)
+                                .average()
+                                .orElse(0.0)
+                ));
 
         System.out.println("Average scores by subject: " + averageScores);
 
         // Find the subject with highest average
         Optional<Map.Entry<String, Double>> topSubject = averageScores.entrySet().stream()
-            .max(Map.Entry.comparingByValue());
+                .max(Map.Entry.comparingByValue());
 
         topSubject.ifPresent(entry ->
-            System.out.println("Top performing subject: " + entry.getKey() +
-                             " with average " + String.format("%.2f", entry.getValue())));
+                System.out.println("Top performing subject: " + entry.getKey() +
+                        " with average " + String.format("%.2f", entry.getValue())));
 
         // Create a summary map with statistics
         Map<String, String> subjectSummary = subjectScores.entrySet().stream()
-            .collect(Collectors.toMap(
-                Map.Entry::getKey,
-                entry -> {
-                    List<Integer> scores = entry.getValue();
-                    int min = scores.stream().mapToInt(i -> i).min().orElse(0);
-                    int max = scores.stream().mapToInt(i -> i).max().orElse(0);
-                    double avg = scores.stream().mapToInt(i -> i).average().orElse(0);
-                    return String.format("Min: %d, Max: %d, Avg: %.1f", min, max, avg);
-                }
-            ));
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> {
+                            List<Integer> scores = entry.getValue();
+                            int min = scores.stream().mapToInt(i -> i).min().orElse(0);
+                            int max = scores.stream().mapToInt(i -> i).max().orElse(0);
+                            double avg = scores.stream().mapToInt(i -> i).average().orElse(0);
+                            return String.format("Min: %d, Max: %d, Avg: %.1f", min, max, avg);
+                        }
+                ));
 
         System.out.println("\nSubject summary:");
         subjectSummary.forEach((subject, summary) ->
-            System.out.println(subject + " - " + summary));
+                System.out.println(subject + " - " + summary));
 
         System.out.println();
     }
